Corrected WhatsApp icon and fixed footer visibility

--- a/styles.css
+++ b/styles.css
@@ -63,7 +63,6 @@ body::before {
   width: 100%;
   display: flex;
   flex-direction: column;
-  flex-grow: 1;
 }
 
 /* Top Navigation */
@@ -346,7 +345,7 @@ html.dark-mode body::before {
   margin-left: 0;
   font-size: 12px;
   font-weight: 600;
-  margin-top: auto;
+  margin-top: 30px;
 }
 
 /* Social Links */
@@ -454,10 +453,11 @@ html.dark-mode body::before {
   }
 
   .footer {
-    margin-top: auto;
-    padding-top: 1rem;
+    margin-top: 2rem;
+    padding-top: 0;
   }
 }
+
 
 
 
